[package]
name = "f3os"
version = "0.1.0"
authors = ["Sammy Hajhamid <pepsipu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.3"
stm32f30x = "0.8.0"

[dependencies.heapless]
default-features = false
version = "0.3.7"